--- a/solidity_ethereum_lessons/lesson_05/package.json
+++ b/solidity_ethereum_lessons/lesson_05/package.json
@@ -1,8 +1,11 @@
 {
   "name": "lesson_05",
   "version": "1.0.0",
-  "description": "- node.js\r - node-gyp\r - hardhat\r - выбрать директорию:",
+  "description": "- node.js\r     - node-gyp\r     - hardhat\r - выбрать директорию:",
   "main": "index.js",
+  "directories": {
+    "test": "test"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -10,11 +13,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@nomiclabs/hardhat-ethers": "^2.0.5",
-    "@nomiclabs/hardhat-waffle": "^2.0.2",
-    "chai": "^4.3.6",
-    "ethereum-waffle": "^3.4.0",
-    "ethers": "^5.5.4",
-    "hardhat": "^2.8.4"
+    "@nomicfoundation/hardhat-toolbox": "^3.0.0",
+    "hardhat": "^2.16.1"
   }
 }
